Se agregaron validaciones en los capos de las celdas para que no se permitan valores negativos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,15 +49,15 @@
             </div>
             <div class="mb-3">
               <label class="form-label">CELDAS CARRO</label>
-              <input type="number" class="form-control" formControlName = "celdasCarro">
+              <input type="number" class="form-control" formControlName = "celdasCarro" min="0">
             </div>
             <div class="mb-3">
               <label class="form-label">CELDAS MOTO</label>
-              <input type="number" class="form-control" formControlName = "celdasMoto">
+              <input type="number" class="form-control" formControlName = "celdasMoto" min="0">
             </div>
             <div class="mb-3">
               <label class="form-label">CELDAS CAMION</label>
-              <input type="number" class="form-control" formControlName = "celdascamion">
+              <input type="number" class="form-control" formControlName = "celdascamion" min="0">
             </div>
           <div class="col text-center">
               <button type="submit">Crear Sede</button>
